--- a/labs/lab5-basic-neural-network.ipynb
+++ b/labs/lab5-basic-neural-network.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade --no-cache-dir gdown"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c1d24e62092b68b4"
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Feedforward Neural Network "
