--- a/labs/lab5-word-embeddings.ipynb
+++ b/labs/lab5-word-embeddings.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade --no-cache-dir gdown"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "788de5d56724dcc2"
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Download data and extract file"
